# familymart-package-query

./: .gitignore  README.md  build.py  command.txt  gui_app.py  main.py  pyproject.toml  query_package.py  requirements.txt
locales/: en.json  zh_CN.json  zh_TW.json
