[project]
name = "familymart-package-query"
version = "0.03"
description = "全家便利商店包裹查詢程式"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddddocr>=1.5.6",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pyinstaller>=6.17.0",
    "pystray>=0.19.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
